--- a/Source-code-New-Spring-5-Gradle-Introduction-Simple-Spring-Gradle-Application/AddressApp/src/com/savaleks/view/PersonEditDialog.fxml
+++ b/Source-code-New-Spring-5-Gradle-Introduction-Simple-Spring-Gradle-Application/AddressApp/src/com/savaleks/view/PersonEditDialog.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.savaleks.view.PersonEditDialogController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="background" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.savaleks.view.PersonEditDialogController">
    <children>
       <GridPane AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
@@ -41,7 +41,7 @@
       </GridPane>
       <HBox layoutX="162.0" layoutY="246.0" prefHeight="25.0" prefWidth="177.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="105.0" text="OK" />
+            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="105.0" text="OK" />
             <Button mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="105.0" text="Cancel" />
          </children>
       </HBox>
